        - Got manpages from Debian by Daniel Kobras, and updated them for MusE2. (Orcan)
        - Remove rem'd preview code in filedialog.cpp. I reimplemented it in appearance.cpp. (Orcan)
        - Remove the environment variables info from the usage output. (Orcan)
        - midiedit links to ctrl. (Orcan)
        - Merged changes from ccherrett into pianroll (h-splittter). (Tim)
26.12.2010:
        - Initial addition of midi track info to pianoroll. WORK IN PROGRESS. (Tim)
          TODO: Just to get off the hard drive. A few things still need to be linked up!
                And we really need icons to replace those 'T' 'C' 'S' 'X' buttons.
        - Fix minor issues that surfaced when I built an RPM for the alpha release (Orcan):
              o Added missing AudioVideo category to the .desktop file.
              o Fixed the executable name in the .desktop file.
              o Converted README.softsynth, synti/vam/README, README.de, SECURITY to UTF8.
              o Made the default MusE_DOC_DIR consistent with other default definitions.
              o Removed explicit rpath to ${QT_LIBRARY_DIR}. cmake should add it automatically
                if there's need.
              o Removed unnecessary linkage to libQtSvg.
              o utils are installed with executable permissons.
25.12.2010:
        - Added fancy background selection widget with live preview to Appearance Settings. (Orcan)
        - Applied Geoff King's second capitalization patch.
23.12.2010:
        - MidiTrackInfo is now self-contained. (Tim)
          Moved all of its members from Arranger into MidiTrackInfo. Removed trackinfo.cpp
23.12.2010:
        - MusE 2.0alpha released! (rj)
22.12.2010:
        - Capitalizations in the menus thanks to Geoff King (gsking1->gmail. com)
        - Added some comments in app.cpp that I've been willing to include for a while. (Orcan)
        - Added a line to CMakeLists to install the splash image. Commented out for now. (Orcan)